namespace Wonderlust.Domain.Enums;

public enum ReactionType
{
    Like,
    Dislike
}